ImpexAST/src/test/resources/errors/quotes/quoted-modifiers5.impex
# ERROR modifier name cannot be surrounded by single quotes. This syntax is valid but resulting name will be n/a 
INSERT_UPDATE Customer; uid[unique=true];Name['default'=Mario]; 
; andi; ; 
